2010-Febuary-09 Chris Morley

	* src/MicroRate.h,src/MesmerILT.h,src/SimpleILT.h,src/SimpleRRKM.h
	Rework MicroRateCalculator classes to have cloned instances. Read
	the XML data by the class at parse time although rate data is still
	stored (for the time being) in Reaction.

	* src/DensityOfStates.h,src/ClassicalRotor.cpp,src/ClassicalRotor.h,
	src/HinderedRotorA.cpp,src/HinderedRotorA.h,src/QMRotor.cpp,src/QMRotor.h
	Similarly for DensityOfStatesCalculator classes.

	* src/MolecularComponents.cpp,src/MolecularComponents.h:
	Apply the above.

2010-January-23 Struan Robertson

	* Update of QA baselines following changes to exponetial down class.

2010-January-21 Chris Morley

	src/EnergyTransferModel.h,src/ExponentialDown.cpp,src/ExponentialDown.h,
	src/MolecularComponents.cpp,src/MolecularComponents.h:
	Plugin class derived from EnergyTransfer model now provide a new instance
	from Find so that they can contain information specific to a molecule.
	Move delta E down from gWellProperties to ExponentialDown. 
	The plugin class carries a pointer to a Molecule - more meaningful 
	than gWellProperties. Read data at parse time rather than when calculating.
	Allow energy transfer model to be user-chosen, default in defaults.xml.
	
	NOTE: The QA does not verify, but probably just needs baselines updating.
	I'll leave this until somebody knowlegeable can review the acceptability
	of the errors.
	
	src/Rdouble.cpp(set_range): do not set value to lower 
	
	src/main.cpp: Version to 0.11 

2010-January-17 Struan Robertson

	* MolecularComponents.h/.cpp: Refactoring of collision operator initialization code.

2010-January-16 Struan Robertson

	* MolecularComponents.h/.cpp: Tidy-up wellproperties constructor.

2010-January-16 Struan Robertson

	* MolecularComponents.h/.cpp: Move exponential down model material onto specfic model.

2010-January-16 Struan Robertson

	* MolecularComponents.h/.cpp: Initial changes to allow for specification of energy transfer model.
