@@ -210,26 +210,18 @@ src/AssociationReaction.cpp -text
 src/AssociationReaction.h -text
 src/BoltzmannDistribution.cpp -text
 src/BoltzmannDistribution.h -text
-src/ClassicalRotor.cpp -text
-src/ClassicalRotor.h -text
 src/Constants.h -text
 src/Crossing.h -text
 src/DensityOfStates.cpp -text
 src/DensityOfStates.h -text
 src/Distribution.h -text
-src/EckartCoefficients.cpp -text
-src/EckartCoefficients.h -text
 src/EnergyTransferModel.h -text
-src/ExponentialDown.cpp -text
-src/ExponentialDown.h -text
 src/IrreversibleExchangeReaction.cpp -text
 src/IrreversibleExchangeReaction.h -text
 src/IrreversibleUnimolecularReaction.cpp -text
 src/IrreversibleUnimolecularReaction.h -text
 src/IsomerizationReaction.cpp -text
 src/IsomerizationReaction.h -text
-src/LandauZenerCrossingCoeff.cpp -text
-src/LandauZenerCrossingCoeff.h -text
 src/Makefile -text
 src/Matrix.h -text
 src/MesmerConfig.h -text
@@ -237,8 +229,6 @@ src/MesmerEnv.cpp -text
 src/MesmerEnv.h -text
 src/MesmerFlags.cpp -text
 src/MesmerFlags.h -text
-src/MesmerILT.cpp -text
-src/MesmerILT.h -text
 src/MesmerMath.cpp -text
 src/MesmerMath.h -text
 src/MesmerPrecision.h -text
@@ -254,26 +244,16 @@ src/MoleculeManager.cpp -text
 src/MoleculeManager.h -text
 src/OneDimensionalFGH.cpp -text
 src/Persistence.h -text
-src/QMHinderedRotorPotential.cpp -text
-src/QMHinderedRotorPotential.h -text
-src/QMRotor.cpp -text
-src/QMRotor.h -text
 src/Reaction.cpp -text
 src/Reaction.h -text
 src/ReactionManager.cpp -text
 src/ReactionManager.h -text
-src/SimpleILT.cpp -text
-src/SimpleILT.h -text
-src/SimpleRRKM.cpp -text
-src/SimpleRRKM.h -text
 src/System.cpp -text
 src/System.h -text
 src/TMatrix.h -text
 src/TimeCounter.cpp -text
 src/TimeCounter.h -text
 src/Tunneling.h -text
-src/WKBCrossingCoeff.cpp -text
-src/WKBCrossingCoeff.h -text
 src/XMLPersist.cpp -text
 src/XMLPersist.h -text
 src/a2d.h -text
@@ -284,6 +264,26 @@ src/main.cpp -text
 src/marray.h -text
 src/oberror.cpp -text
 src/oberror.h -text
+src/plugins/ClassicalRotor.cpp -text
+src/plugins/ClassicalRotor.h -text
+src/plugins/EckartCoefficients.cpp -text
+src/plugins/EckartCoefficients.h -text
+src/plugins/ExponentialDown.cpp -text
+src/plugins/ExponentialDown.h -text
+src/plugins/LandauZenerCrossingCoeff.cpp -text
+src/plugins/LandauZenerCrossingCoeff.h -text
+src/plugins/MesmerILT.cpp -text
+src/plugins/MesmerILT.h -text
+src/plugins/QMHinderedRotorPotential.cpp -text
+src/plugins/QMHinderedRotorPotential.h -text
+src/plugins/QMRotor.cpp -text
+src/plugins/QMRotor.h -text
+src/plugins/SimpleILT.cpp -text
+src/plugins/SimpleILT.h -text
+src/plugins/SimpleRRKM.cpp -text
+src/plugins/SimpleRRKM.h -text
+src/plugins/WKBCrossingCoeff.cpp -text
+src/plugins/WKBCrossingCoeff.h -text
 src/source.ps -text
 src/unitsConversion.cpp -text
 src/unitsConversion.h -text
