@@ -193,15 +193,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\ClassicalRotor.cpp"
+				RelativePath="..\..\src\plugins\ClassicalRotor.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\EckartCoefficients.cpp"
+				RelativePath="..\..\src\plugins\EckartCoefficients.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\ExponentialDown.cpp"
+				RelativePath="..\..\src\plugins\ExponentialDown.cpp"
 				>
 			</File>
 			<File
@@ -217,7 +217,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\HinderedRotorA.cpp"
+				RelativePath="..\..\src\plugins\HinderedRotorA.cpp"
 				>
 			</File>
 			<File
@@ -233,7 +233,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\LandauZenerCrossingCoeff.cpp"
+				RelativePath="..\..\src\plugins\LandauZenerCrossingCoeff.cpp"
 				>
 			</File>
 			<File
@@ -249,7 +249,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\MesmerILT.cpp"
+				RelativePath="..\..\src\plugins\MesmerILT.cpp"
 				>
 			</File>
 			<File
@@ -281,7 +281,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\QMRotor.cpp"
+				RelativePath="..\..\src\plugins\QMRotor.cpp"
 				>
 			</File>
 			<File
@@ -301,11 +301,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\SimpleILT.cpp"
+				RelativePath="..\..\src\plugins\SimpleILT.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\SimpleRRKM.cpp"
+				RelativePath="..\..\src\plugins\SimpleRRKM.cpp"
 				>
 			</File>
 			<File
@@ -321,7 +321,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\WKBCrossingCoeff.cpp"
+				RelativePath="..\..\src\plugins\WKBCrossingCoeff.cpp"
 				>
 			</File>
 			<File
@@ -351,7 +351,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\ClassicalRotor.h"
+				RelativePath="..\..\src\plugins\ClassicalRotor.h"
 				>
 			</File>
 			<File
@@ -375,7 +375,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\EckartCoefficients.h"
+				RelativePath="..\..\src\plugins\EckartCoefficients.h"
 				>
 			</File>
 			<File
@@ -383,15 +383,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\ExponentialDown.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\src\formatfloat.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\HinderedRotorA.h"
+				RelativePath="..\..\src\plugins\HinderedRotorA.h"
 				>
 			</File>
 			<File
@@ -407,7 +403,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\LandauZenerCrossingCoeff.h"
+				RelativePath="..\..\src\plugins\LandauZenerCrossingCoeff.h"
 				>
 			</File>
 			<File
@@ -431,7 +427,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\MesmerILT.h"
+				RelativePath="..\..\src\plugins\MesmerILT.h"
 				>
 			</File>
 			<File
@@ -471,7 +467,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\QMRotor.h"
+				RelativePath="..\..\src\plugins\QMRotor.h"
 				>
 			</File>
 			<File
@@ -487,11 +483,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\SimpleILT.h"
+				RelativePath="..\..\src\plugins\SimpleILT.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\SimpleRRKM.h"
+				RelativePath="..\..\src\plugins\SimpleRRKM.h"
 				>
 			</File>
 			<File
@@ -519,7 +515,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\WKBCrossingCoeff.h"
+				RelativePath="..\..\src\plugins\WKBCrossingCoeff.h"
 				>
 			</File>
 			<File
@@ -537,10 +533,6 @@
 		</File>
 		<File
 			RelativePath="..\..\mesmerDiag.xsl"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\Notes.txt"
 			>
 		</File>
 	</Files>
